syntax = "proto3";

package BidirectionalStreamingRPC;

service Greeter {
    rpc SayRoute(stream HelloRequest) returns (stream HelloReply) {};
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}


